--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,8 @@ yarn-error.log*
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/prettier.xml
+.idea/jsLibraryMappings.xml
 
 # Generated files
 .idea/**/contentModel.xml
