--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "tabWidth": 2,
   "useTabs": false,
   "singleQuote": true,
-  "trailingComma": "none",
+  "trailingComma": "all",
   "bracketSpacing": true,
   "jsxBracketSameLine": false,
   "semi": true
